<resources>
    <string name="app_name">work1</string>
    <string name="count_down_to_election_day">Count Down To Election Day</string>
    <string name="election_commission_of_thailand">ELECTION COMMISSION OF THAILAND</string>
    <string name="_24">24</string>
    <string name="_365">365</string>
    <string name="_60">60</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="next">NEXT</string>
    <string name="สำนักงานคณะกรรมการการเลือกตั้ง">สำนักงานคณะกรรมการการเลือกตั้ง</string>
    <string name="todo">TODO</string>
</resources>
